namespaces/live.cloud-platform.service.justice.gov.uk/laa-sds-config-generator-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-sds-config-generator-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-secure-document-storage"
    cloud-platform.justice.gov.uk/application: "Secure document storage config generator"
    cloud-platform.justice.gov.uk/owner: "Secure Document Storage: laasecuredocumentstorage@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-secure-document-storage-config-generator.git"
    cloud-platform.justice.gov.uk/team-name: "secure-doc-storage-team"
    cloud-platform.justice.gov.uk/review-after: ""
